[package]
name = "gph"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gph"
path = "src/main.rs"

[dependencies]
gph_core = {git = "https://github.com/VALERE91/gph_core.git"}
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5.41", features = ["derive"] }
dirs = "6.0.0"
chrono = "0.4.41"
toml = "0.8.23"
